testsuite/tests/typecheck/should_compile/T11723.hs
{-# LANGUAGE TypeInType #-}
module Example where

import Data.Typeable
import GHC.Exts

data Wat (a :: TYPEvis ('TupleRep '[])) = Wat a
